--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,10 +11,6 @@ body {
   padding: 0;
 }
 
-h1 {
-  margin-left: 20px;
-}
-
 hr {
   display: block;
   margin-bottom: 15px;
@@ -41,6 +37,11 @@ hr {
 .btn button:hover {
   background-color: rgb(167, 106, 230);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.9);
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
 
 /****** Welcome Page *******/
@@ -120,7 +121,9 @@ hr {
   .functioning__cards {
     flex-direction: row;
     gap: 2%;
-    padding-bottom: 40px;
+    padding: 40px 0 40px 0;
+    align-items: center;
+    justify-content: center;
   }
 }
 .functioning__cards .functioning__title {
@@ -145,7 +148,6 @@ hr {
   border-radius: 30px;
   background-color: #F6F6F6;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  margin-bottom: 25px;
 }
 .functioning__cards .card p {
   width: 100%;
@@ -166,22 +168,33 @@ hr {
 /****** 3ème section les restaurants *******/
 .restaurants__cards {
   background-color: #F6F6F6;
-  display: flex;
+  padding-top: 10px;
+}
+.restaurants__cards .card__grid {
+  display: grid;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
 }
 @media (min-width: 1024px) {
-  .restaurants__cards {
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 5%;
+  .restaurants__cards .card__grid {
+    display: grid;
+    grid-template-columns: 490px 490px;
+    gap: 70px;
+    justify-content: center;
+    padding-bottom: 20px;
   }
 }
-@media (min-width: 768px) {
-  .restaurants__cards h1 {
-    width: 73%;
+@media (min-width: 1024px) {
+  .restaurants__cards .card__grid h1 {
+    background-color: #F6F6F6;
   }
+}
+.restaurants__cards #palette,
+.restaurants__cards #francaise {
+  grid-column: 1;
+}
+.restaurants__cards #enchantee,
+.restaurants__cards #sens {
+  grid-column: 2;
 }
 .restaurants__cards .card {
   position: relative;
@@ -206,6 +219,7 @@ hr {
   position: absolute;
   top: 10px;
   right: 10px;
+  border-radius: 3px;
   border: #99E2D0 1px solid;
   background-color: #99E2D0;
   color: #008766;
@@ -229,15 +243,19 @@ hr {
   display: flex;
   justify-content: space-between;
 }
+.restaurants__cards .card .card__content .card__txt {
+  margin: 8px 0 0 20px;
+}
 .restaurants__cards .card .card__content .card__txt h2 {
   font-size: 18px;
-  margin: 10px;
+  margin: 0;
 }
 .restaurants__cards .card .card__content .card__txt p {
-  margin: 10px;
+  margin-top: 5px;
 }
 .restaurants__cards .card .card__content .card__fav {
-  padding-right: 35px;
+  padding-right: 40px;
+  margin-top: 25px;
   position: relative;
 }
 .restaurants__cards .card .card__content .card__fav .fa-regular,
@@ -458,6 +476,7 @@ footer .foot p {
   display: block;
 }
 .food .card .card__price {
-  padding-top: 13px;
-  padding-right: 15px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
 }/*# sourceMappingURL=style.css.map */
