--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -46,11 +46,13 @@ hr {
         padding: 15px;
         border-radius: 25px;
         color: #ffffff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        transition: 200ms;
 
         &:hover {
             background-color: rgb(167, 106, 230);
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.9); // Ombre plus foncée au survol
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); // Ombre plus foncée au survol
+            filter: brightness(1.05);
         }
     }
 }
@@ -80,11 +82,16 @@ a {
 
 .location {
     @include flex-center;
-    width: 105%;
-    height: 50%;
+    width: 100%;
+    height: 50px;
     background-color: #EAEAEA;
     box-shadow: 0 -5px 5px rgba(0, 0, 0, 0.5), 0 5px 5px rgba(0, 0, 0, 0.5);
     margin-bottom: 8px;
+
+    @media (min-width: 1024px) {
+        box-shadow: none;
+        margin-bottom: 0;
+    }
 
     i {
         margin-right: 10px;
@@ -92,6 +99,12 @@ a {
 
     label {
         @include flex-center;
+        padding-left: 40px;
+    }
+
+    #localisation {
+        color: #353535;
+        padding-left: 15px;
     }
 
     input {
@@ -110,7 +123,7 @@ a {
 
 .txt__btn {
     background-color: #F6F6F6;
-    padding-bottom: 60px;
+    padding-bottom: 30px;
 
     .txt {
         @include flex-center;
@@ -118,27 +131,44 @@ a {
         flex-direction: column;
         padding-bottom: 30px;
 
+        h2 {
+            font-size: 34px;
+
+            @media (min-width: 1024px) {
+                font-size: 40px;
+                margin-bottom: 0;
+            }
+        }
+
         p {
+            color: #353535;
+            font-size: 18px;
+
             br {
-                @media (min-width: 768px) {
-                    display: none;
-                }
+                display: none;
             }
         }
     }
 }
 
 /****** 2ème section *******/
+.functioning__txt {
+    width: 100%;
+    max-width: 1053px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 30px;
+}
 
 .functioning__cards {
     @include flex-center;
     flex-direction: column;
     flex-wrap: wrap;
-    padding-top: 35px;
+    padding-top: 15px;
 
     @media (min-width: 768px) {
         gap: 2%;
-        padding: 40px 0 40px 0;
+        padding-bottom: 50px;
         align-items: center;
         justify-content: center;
     }
@@ -159,18 +189,18 @@ a {
         color: white;
         padding: 5px 9px 5px 9px;
         border-radius: 100%;
-        margin-left: -30px;
-        margin-top: 10px;
+        margin-left: -16px;
+        margin-top: 20px;
     }
 
     .card {
         display: flex;
         width: 322px;
+        height: 72px;
         border: 1px solid #F6F6F6;
-        padding: 15px;
-        border-radius: 30px;
+        border-radius: 20px;
         background-color: #F6F6F6;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
         margin-bottom: 25px;
 
         @media (min-width: 1025px) {
@@ -180,6 +210,8 @@ a {
         p {
             width: 100%;
             display: flex;
+            align-items: center;
+
 
             i {
                 @include flex-center;
@@ -197,19 +229,26 @@ a {
 
 /****** 3ème section les restaurants *******/
 
+.restaurant {
+    width: 100%;
+    max-width: 1053px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .restaurants__cards {
     background-color: #F6F6F6;
     padding-top: 10px;
+    padding-bottom: 30px;
 
     .card__grid {
         display: grid;
         justify-content: center;
 
-
         @media (min-width: 1024px) {
             display: grid;
             grid-template-columns: 490px 490px; // Deux colonnes de largeur égale
-            gap: 5%; // Espacement entre les colonnes
+            gap: 6%; // Espacement entre les colonnes
             justify-content: center;
             padding-bottom: 20px;
         }
@@ -239,7 +278,6 @@ a {
         width: 340px;
         height: 251px;
         border-radius: 15px;
-        margin-bottom: 18px;
 
         &:hover {
             transform: scale(1.05); // Zoom au survol
@@ -336,8 +374,7 @@ a {
 footer {
     background-color: #353535;
     color: white;
-    padding-top: 15px;
-    padding-bottom: 20px;
+    padding-top: 34px;
 
     .foot {
         @media (min-width: 768px) {
@@ -354,8 +391,9 @@ footer {
                 font-weight: 400;
                 font-size: 18px;
                 color: white;
-                margin-left: 80px;
+                margin-left: 60px;
                 margin-right: 20px;
+                padding-top: 20px;
             }
         }
 
@@ -367,6 +405,7 @@ footer {
             @media (min-width: 1024px) {
                 justify-content: flex-end;
                 width: 100%;
+                padding-top: 20px;
             }
         }
 
@@ -376,6 +415,8 @@ footer {
 
         p {
             margin-left: 22px;
+            margin-bottom: 0;
+            font-size: 16px;
         }
     }
 }
@@ -486,7 +527,6 @@ footer {
     .card {
         width: 349px;
         height: 72px;
-        border: #F6F6F6 1px solid;
         background-color: white;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         margin-bottom: 22px;
@@ -537,7 +577,7 @@ footer {
 
         &:hover .check {
             width: 60px;
-            height: 75px;
+            height: 72px;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
             background-color: #99E2D0;
