--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,6 +18,11 @@ hr {
   width: 40px;
   border: #99E2D0 3px solid;
 }
+@media (min-width: 1024px) {
+  hr {
+    margin-left: -315px;
+  }
+}
 
 .btn {
   display: flex;
@@ -95,7 +100,7 @@ a {
 .location input {
   border: none;
   background-color: #EAEAEA;
-  height: 50px;
+  height: 48px;
 }
 .location input::-moz-placeholder {
   font-weight: bold;
@@ -233,7 +238,7 @@ a {
   .restaurants__cards .card__grid {
     display: grid;
     grid-template-columns: 490px 490px;
-    gap: 6%;
+    gap: 5%;
     justify-content: center;
     padding-bottom: 20px;
   }
@@ -387,12 +392,10 @@ footer .foot p {
 }
 
 /****** Menus images et titres *******/
-@media (min-width: 768px) {
-  .menu__part {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.menu__part {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .menu__image {
@@ -407,25 +410,35 @@ footer .foot p {
 }
 
 .menu {
+  width: 100%;
   background-color: #F6F6F6;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   z-index: 2;
   position: relative;
-  margin-top: -60px;
+  margin-top: -50px;
   padding-bottom: 60px;
 }
 @media (min-width: 768px) {
   .menu {
-    width: 1055px;
+    width: 80%;
   }
+}
+@media (min-width: 1024px) {
+  .menu {
+    width: 80%;
+  }
+}
+.menu .menu__title {
+  max-width: 349px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .menu .menu__title h1 {
   font-family: "Shrikhand", sans-serif;
   font-size: 28px;
   font-style: italic;
   font-weight: 400;
-  padding-top: 60px;
 }
 @media (min-width: 768px) {
   .menu .menu__title h1 {
@@ -466,18 +479,21 @@ footer .foot p {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  max-width: 349px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (min-width: 1024px) {
+  .food {
+    max-width: 634px;
+  }
 }
 .food .food__title {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: 18px;
   width: 100%;
-  margin: 40px 0 0 20px;
-}
-@media (min-width: 768px) {
-  .food .food__title {
-    margin-left: 700px;
-  }
+  margin-bottom: 2px;
 }
 .food .card {
   width: 349px;
@@ -488,8 +504,14 @@ footer .foot p {
   border-radius: 15px;
   position: relative;
 }
+@media (min-width: 1024px) {
+  .food .card {
+    width: 634px;
+  }
+}
 .food .card .card__content {
   display: flex;
+  max-width: 634px;
 }
 .food .card .card__content .card__txt {
   width: 80%;
@@ -538,6 +560,8 @@ footer .foot p {
 }
 .food .card .card__price {
   display: flex;
-  align-items: center;
+  justify-content: flex-end;
+  align-items: flex-end;
   margin-right: 10px;
+  margin-top: 25px;
 }/*# sourceMappingURL=style.css.map */
