--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -33,6 +33,9 @@ hr {
     margin-left: -177px;
     width: 40px;
     border: #99E2D0 3px solid;
+    @media (min-width: 1024px) {
+        margin-left: -315px;
+    }
 }
 
 .btn {
@@ -110,7 +113,7 @@ a {
     input {
         border: none;
         background-color: #EAEAEA;
-        height: 50px;
+        height: 48px;
 
         &::placeholder {
             font-weight: bold;
@@ -248,7 +251,7 @@ a {
         @media (min-width: 1024px) {
             display: grid;
             grid-template-columns: 490px 490px; // Deux colonnes de largeur égale
-            gap: 6%; // Espacement entre les colonnes
+            gap: 5%; // Espacement entre les colonnes
             justify-content: center;
             padding-bottom: 20px;
         }
@@ -435,9 +438,7 @@ footer {
 /****** Menus images et titres *******/
 
 .menu__part {
-    @media (min-width: 768px) {
         @include flex-center;
-    }
 }
 
 .menu__image {
@@ -452,25 +453,34 @@ footer {
 }
 
 .menu {
+    width: 100%;
     background-color: #F6F6F6;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     z-index: 2;
     position: relative;
-    margin-top: -60px;
+    margin-top: -50px;
     padding-bottom: 60px;
 
     @media (min-width: 768px) {
-        width: 1055px;
+        width: 80%;
+    }
+    @media (min-width: 1024px) {
+        width: 80%;
     }
 
+    
+
     .menu__title {
+        max-width: 349px;
+        margin-left: auto;
+        margin-right: auto;
+
         h1 {
             font-family: 'Shrikhand', sans-serif;
             font-size: 28px;
             font-style: italic;
             font-weight: 400;
-            padding-top: 60px;
 
             @media (min-width: 768px) {
                 @include flex-center;
@@ -513,15 +523,17 @@ footer {
 .food {
     @include flex-center;
     flex-direction: column;
+    max-width: 349px;
+    margin-left: auto;
+    margin-right: auto;
+    @media (min-width: 1024px) {
+        max-width: 634px;
+    }
 
     .food__title {
         @include font-title;
         width: 100%;
-        margin: 40px 0 0 20px;
-
-        @media (min-width: 768px) {
-            margin-left: 700px;
-        }
+        margin-bottom: 2px;
     }
 
     .card {
@@ -533,8 +545,13 @@ footer {
         border-radius: 15px;
         position: relative;
 
+        @media (min-width: 1024px) {
+            width: 634px;
+        }
+
         .card__content {
             display: flex;
+            max-width: 634px;
 
             .card__txt {
                 width: 80%;
@@ -590,8 +607,10 @@ footer {
 
         .card__price {
             display: flex;
-            align-items: center;
+            justify-content: flex-end;
+            align-items: flex-end;
             margin-right: 10px;
+            margin-top: 25px;
         }
     }
 }
