--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,10 +28,10 @@ hr {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 .btn button {
-  border: #9747FF 1px solid;
+  border: #9747FF 0 solid;
   background: linear-gradient(0deg, rgb(147, 86, 220) 30%, rgb(255, 121, 218) 82%);
   padding: 15px;
   border-radius: 25px;
@@ -123,7 +123,6 @@ a {
   align-items: center;
   text-align: center;
   flex-direction: column;
-  padding-bottom: 30px;
 }
 .txt__btn .txt h2 {
   font-size: 34px;
@@ -149,6 +148,7 @@ a {
   margin-left: auto;
   margin-right: auto;
   padding-top: 30px;
+  padding-left: 15px;
 }
 
 .functioning__cards {
@@ -224,6 +224,7 @@ a {
   max-width: 1053px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 15px;
 }
 
 .restaurants__cards {
@@ -264,6 +265,7 @@ a {
   width: 340px;
   height: 251px;
   border-radius: 15px;
+  transition: 80ms;
 }
 .restaurants__cards .card:hover {
   transform: scale(1.05);
@@ -344,7 +346,7 @@ a {
 footer {
   background-color: #353535;
   color: white;
-  padding-top: 34px;
+  padding-top: 14px;
 }
 @media (min-width: 768px) {
   footer .foot {
@@ -483,6 +485,7 @@ footer .foot p {
   max-width: 349px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 20px;
 }
 @media (min-width: 1024px) {
   .food {
@@ -567,4 +570,8 @@ footer .foot p {
   align-items: flex-end;
   margin-right: 10px;
   margin-top: 25px;
+}
+
+.commander {
+  padding: 35px;
 }/*# sourceMappingURL=style.css.map */
