--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,17 +33,17 @@ hr {
 .btn button {
   border: #9747FF 0 solid;
   background: linear-gradient(0deg, rgb(147, 86, 220) 30%, rgb(255, 121, 218) 82%);
-  padding: 15px;
+  padding: 15px 49px 15px 49px;
   border-radius: 25px;
   color: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  transition: 200ms;
   cursor: pointer;
 }
 .btn button:hover {
   background-color: rgb(167, 106, 230);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
   filter: brightness(1.15);
+  transition: 400ms;
 }
 
 a {
@@ -265,11 +265,11 @@ a {
   width: 340px;
   height: 251px;
   border-radius: 15px;
-  transition: 80ms;
 }
 .restaurants__cards .card:hover {
   transform: scale(1.05);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  transition: 500ms;
 }
 @media (min-width: 768px) {
   .restaurants__cards .card {
@@ -549,7 +549,6 @@ footer .foot p {
   background-color: white;
   padding: 5px;
   display: none;
-  transition: 50ms;
 }
 .food .card:hover .check {
   width: 69px;
@@ -560,6 +559,7 @@ footer .foot p {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 50ms;
 }
 .food .card:hover .check i {
   display: block;
