--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -33,6 +33,7 @@ hr {
     margin-left: -177px;
     width: 40px;
     border: #99E2D0 3px solid;
+
     @media (min-width: 1024px) {
         margin-left: -315px;
     }
@@ -49,16 +50,16 @@ hr {
         border-radius: 25px;
         color: #ffffff;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        
+
         cursor: pointer;
 
         &:hover {
             background-color: rgb(167, 106, 230);
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); 
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
             filter: brightness(1.15);
             transition: 400ms;
         }
-    }    
+    }
 }
 
 a {
@@ -253,10 +254,18 @@ a {
 
         @media (min-width: 1024px) {
             display: grid;
-            grid-template-columns: 490px 490px; // Deux colonnes de largeur égale
-            gap: 5%; // Espacement entre les colonnes
+            grid-template-columns: 1fr 1fr;
+            gap: 50px;
             justify-content: center;
             padding-bottom: 20px;
+
+            .card__grid> :first-child {
+                justify-items: end;
+            }
+
+            .card__grid> :last-child {
+                justify-items: start;
+            }
         }
 
         h1 {
@@ -284,7 +293,7 @@ a {
         width: 340px;
         height: 251px;
         border-radius: 15px;
-        
+
 
         &:hover {
             transform: scale(1.05); // Zoom au survol
@@ -443,7 +452,7 @@ footer {
 /****** Menus images et titres *******/
 
 .menu__part {
-        @include flex-center;
+    @include flex-center;
 }
 
 .menu__image {
@@ -470,11 +479,12 @@ footer {
     @media (min-width: 768px) {
         width: 80%;
     }
+
     @media (min-width: 1024px) {
         width: 80%;
     }
 
-    
+
 
     .menu__title {
         max-width: 349px;
@@ -532,6 +542,7 @@ footer {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
+
     @media (min-width: 1024px) {
         max-width: 634px;
     }
@@ -596,7 +607,7 @@ footer {
                 background-color: white;
                 padding: 5px;
                 display: none;
-                
+
             }
         }
 
