--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,25 +18,32 @@ hr {
   width: 40px;
   border: #99E2D0 3px solid;
 }
+@media (min-width: 1024px) {
+  hr {
+    margin-left: -315px;
+  }
+}
 
 .btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 .btn button {
-  border: #9747FF 1px solid;
-  background: rgb(147, 86, 220);
+  border: #9747FF 0 solid;
   background: linear-gradient(0deg, rgb(147, 86, 220) 30%, rgb(255, 121, 218) 82%);
-  padding: 15px;
+  padding: 15px 49px 15px 49px;
   border-radius: 25px;
   color: #ffffff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 .btn button:hover {
   background-color: rgb(167, 106, 230);
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.9);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+  filter: brightness(1.15);
+  transition: 400ms;
 }
 
 a {
@@ -46,6 +53,7 @@ a {
 
 .fa-heart::before {
   font-size: 22px;
+  cursor: pointer;
 }
 
 /****** Welcome Page *******/
@@ -65,11 +73,17 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 105%;
-  height: 50%;
+  width: 100%;
+  height: 50px;
   background-color: #EAEAEA;
   box-shadow: 0 -5px 5px rgba(0, 0, 0, 0.5), 0 5px 5px rgba(0, 0, 0, 0.5);
   margin-bottom: 8px;
+}
+@media (min-width: 1024px) {
+  .location {
+    box-shadow: none;
+    margin-bottom: 0;
+  }
 }
 .location i {
   margin-right: 10px;
@@ -78,11 +92,16 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-left: 40px;
+}
+.location #localisation {
+  color: #353535;
+  padding-left: 15px;
 }
 .location input {
   border: none;
   background-color: #EAEAEA;
-  height: 50px;
+  height: 48px;
 }
 .location input::-moz-placeholder {
   font-weight: bold;
@@ -96,7 +115,7 @@ a {
 /****** 1ère section *******/
 .txt__btn {
   background-color: #F6F6F6;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
 }
 .txt__btn .txt {
   display: flex;
@@ -104,27 +123,46 @@ a {
   align-items: center;
   text-align: center;
   flex-direction: column;
-  padding-bottom: 30px;
 }
-@media (min-width: 768px) {
-  .txt__btn .txt p br {
-    display: none;
+.txt__btn .txt h2 {
+  font-size: 34px;
+}
+@media (min-width: 1024px) {
+  .txt__btn .txt h2 {
+    font-size: 40px;
+    margin-bottom: 0;
   }
+}
+.txt__btn .txt p {
+  color: #353535;
+  font-size: 18px;
+}
+.txt__btn .txt p br {
+  display: none;
 }
 
 /****** 2ème section *******/
+.functioning__txt {
+  width: 100%;
+  max-width: 1053px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 30px;
+  padding-left: 15px;
+}
+
 .functioning__cards {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   flex-wrap: wrap;
-  padding-top: 35px;
+  padding-top: 15px;
 }
 @media (min-width: 768px) {
   .functioning__cards {
     gap: 2%;
-    padding: 40px 0 40px 0;
+    padding-bottom: 50px;
     align-items: center;
     justify-content: center;
   }
@@ -145,17 +183,17 @@ a {
   color: white;
   padding: 5px 9px 5px 9px;
   border-radius: 100%;
-  margin-left: -30px;
-  margin-top: 10px;
+  margin-left: -16px;
+  margin-top: 20px;
 }
 .functioning__cards .card {
   display: flex;
   width: 322px;
+  height: 72px;
   border: 1px solid #F6F6F6;
-  padding: 15px;
-  border-radius: 30px;
+  border-radius: 20px;
   background-color: #F6F6F6;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
   margin-bottom: 25px;
 }
 @media (min-width: 1025px) {
@@ -166,6 +204,7 @@ a {
 .functioning__cards .card p {
   width: 100%;
   display: flex;
+  align-items: center;
 }
 .functioning__cards .card p i {
   display: flex;
@@ -180,9 +219,18 @@ a {
 }
 
 /****** 3ème section les restaurants *******/
+.restaurant {
+  width: 100%;
+  max-width: 1053px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+}
+
 .restaurants__cards {
   background-color: #F6F6F6;
   padding-top: 10px;
+  padding-bottom: 30px;
 }
 .restaurants__cards .card__grid {
   display: grid;
@@ -191,10 +239,16 @@ a {
 @media (min-width: 1024px) {
   .restaurants__cards .card__grid {
     display: grid;
-    grid-template-columns: 490px 490px;
-    gap: 5%;
+    grid-template-columns: 1fr 1fr;
+    gap: 50px;
     justify-content: center;
     padding-bottom: 20px;
+  }
+  .restaurants__cards .card__grid .card__grid > :first-child {
+    justify-items: end;
+  }
+  .restaurants__cards .card__grid .card__grid > :last-child {
+    justify-items: start;
   }
 }
 @media (min-width: 1024px) {
@@ -217,11 +271,11 @@ a {
   width: 340px;
   height: 251px;
   border-radius: 15px;
-  margin-bottom: 18px;
 }
 .restaurants__cards .card:hover {
   transform: scale(1.05);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  transition: 500ms;
 }
 @media (min-width: 768px) {
   .restaurants__cards .card {
@@ -298,8 +352,7 @@ a {
 footer {
   background-color: #353535;
   color: white;
-  padding-top: 15px;
-  padding-bottom: 20px;
+  padding-top: 14px;
 }
 @media (min-width: 768px) {
   footer .foot {
@@ -315,8 +368,9 @@ footer .foot .foot__title h2 {
   font-weight: 400;
   font-size: 18px;
   color: white;
-  margin-left: 80px;
+  margin-left: 60px;
   margin-right: 20px;
+  padding-top: 20px;
 }
 @media (min-width: 768px) {
   footer .foot .foot__txt {
@@ -327,6 +381,7 @@ footer .foot .foot__title h2 {
   footer .foot .foot__txt {
     justify-content: flex-end;
     width: 100%;
+    padding-top: 20px;
   }
 }
 footer .foot i {
@@ -334,6 +389,8 @@ footer .foot i {
 }
 footer .foot p {
   margin-left: 22px;
+  margin-bottom: 0;
+  font-size: 16px;
 }
 
 /****** Menus pages *******/
@@ -344,12 +401,10 @@ footer .foot p {
 }
 
 /****** Menus images et titres *******/
-@media (min-width: 768px) {
-  .menu__part {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.menu__part {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .menu__image {
@@ -364,25 +419,35 @@ footer .foot p {
 }
 
 .menu {
+  width: 100%;
   background-color: #F6F6F6;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   z-index: 2;
   position: relative;
-  margin-top: -60px;
+  margin-top: -50px;
   padding-bottom: 60px;
 }
 @media (min-width: 768px) {
   .menu {
-    width: 1055px;
+    width: 80%;
   }
+}
+@media (min-width: 1024px) {
+  .menu {
+    width: 80%;
+  }
+}
+.menu .menu__title {
+  max-width: 349px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .menu .menu__title h1 {
   font-family: "Shrikhand", sans-serif;
   font-size: 28px;
   font-style: italic;
   font-weight: 400;
-  padding-top: 60px;
 }
 @media (min-width: 768px) {
   .menu .menu__title h1 {
@@ -423,34 +488,44 @@ footer .foot p {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  max-width: 349px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+}
+@media (min-width: 1024px) {
+  .food {
+    max-width: 634px;
+  }
 }
 .food .food__title {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: 18px;
   width: 100%;
-  margin: 40px 0 0 20px;
-}
-@media (min-width: 768px) {
-  .food .food__title {
-    margin-left: 700px;
-  }
+  margin-bottom: 2px;
 }
 .food .card {
   width: 349px;
   height: 72px;
-  border: #F6F6F6 1px solid;
   background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   margin-bottom: 22px;
   border-radius: 15px;
   position: relative;
+  cursor: pointer;
+}
+@media (min-width: 1024px) {
+  .food .card {
+    width: 634px;
+  }
 }
 .food .card .card__content {
   display: flex;
+  max-width: 634px;
 }
 .food .card .card__content .card__txt {
-  width: 80%;
+  width: 90%;
   margin-left: 15px;
   white-space: nowrap;
   overflow: hidden;
@@ -482,20 +557,27 @@ footer .foot p {
   display: none;
 }
 .food .card:hover .check {
-  width: 60px;
-  height: 75px;
+  width: 69px;
+  height: 72px;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #99E2D0;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 50ms;
 }
 .food .card:hover .check i {
   display: block;
 }
 .food .card .card__price {
   display: flex;
-  align-items: center;
+  justify-content: flex-end;
+  align-items: flex-end;
   margin-right: 10px;
+  margin-top: 25px;
+}
+
+.commander {
+  padding: 35px;
 }/*# sourceMappingURL=style.css.map */
