--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -33,24 +33,31 @@ hr {
     margin-left: -177px;
     width: 40px;
     border: #99E2D0 3px solid;
+
+    @media (min-width: 1024px) {
+        margin-left: -315px;
+    }
 }
 
 .btn {
     @include flex-center;
-    margin-top: 30px;
+    margin-top: 10px;
 
     button {
-        border: #9747FF 1px solid;
-        background: rgb(147, 86, 220);
+        border: #9747FF 0 solid;
         background: linear-gradient(0deg, rgba(147, 86, 220, 1) 30%, rgba(255, 121, 218, 1) 82%);
-        padding: 15px;
+        padding: 15px 49px 15px 49px;
         border-radius: 25px;
         color: #ffffff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+
+        cursor: pointer;
 
         &:hover {
             background-color: rgb(167, 106, 230);
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.9); // Ombre plus foncée au survol
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+            filter: brightness(1.15);
+            transition: 400ms;
         }
     }
 }
@@ -62,6 +69,7 @@ a {
 
 .fa-heart::before {
     font-size: 22px;
+    cursor: pointer;
 }
 
 /****** Welcome Page *******/
@@ -80,11 +88,16 @@ a {
 
 .location {
     @include flex-center;
-    width: 105%;
-    height: 50%;
+    width: 100%;
+    height: 50px;
     background-color: #EAEAEA;
     box-shadow: 0 -5px 5px rgba(0, 0, 0, 0.5), 0 5px 5px rgba(0, 0, 0, 0.5);
     margin-bottom: 8px;
+
+    @media (min-width: 1024px) {
+        box-shadow: none;
+        margin-bottom: 0;
+    }
 
     i {
         margin-right: 10px;
@@ -92,12 +105,18 @@ a {
 
     label {
         @include flex-center;
+        padding-left: 40px;
+    }
+
+    #localisation {
+        color: #353535;
+        padding-left: 15px;
     }
 
     input {
         border: none;
         background-color: #EAEAEA;
-        height: 50px;
+        height: 48px;
 
         &::placeholder {
             font-weight: bold;
@@ -110,35 +129,52 @@ a {
 
 .txt__btn {
     background-color: #F6F6F6;
-    padding-bottom: 60px;
+    padding-bottom: 30px;
 
     .txt {
         @include flex-center;
         text-align: center;
         flex-direction: column;
-        padding-bottom: 30px;
+
+        h2 {
+            font-size: 34px;
+
+            @media (min-width: 1024px) {
+                font-size: 40px;
+                margin-bottom: 0;
+            }
+        }
 
         p {
+            color: #353535;
+            font-size: 18px;
+
             br {
-                @media (min-width: 768px) {
-                    display: none;
-                }
+                display: none;
             }
         }
     }
 }
 
 /****** 2ème section *******/
+.functioning__txt {
+    width: 100%;
+    max-width: 1053px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 30px;
+    padding-left: 15px;
+}
 
 .functioning__cards {
     @include flex-center;
     flex-direction: column;
     flex-wrap: wrap;
-    padding-top: 35px;
+    padding-top: 15px;
 
     @media (min-width: 768px) {
         gap: 2%;
-        padding: 40px 0 40px 0;
+        padding-bottom: 50px;
         align-items: center;
         justify-content: center;
     }
@@ -159,18 +195,18 @@ a {
         color: white;
         padding: 5px 9px 5px 9px;
         border-radius: 100%;
-        margin-left: -30px;
-        margin-top: 10px;
+        margin-left: -16px;
+        margin-top: 20px;
     }
 
     .card {
         display: flex;
         width: 322px;
+        height: 72px;
         border: 1px solid #F6F6F6;
-        padding: 15px;
-        border-radius: 30px;
+        border-radius: 20px;
         background-color: #F6F6F6;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
         margin-bottom: 25px;
 
         @media (min-width: 1025px) {
@@ -180,6 +216,8 @@ a {
         p {
             width: 100%;
             display: flex;
+            align-items: center;
+
 
             i {
                 @include flex-center;
@@ -197,21 +235,37 @@ a {
 
 /****** 3ème section les restaurants *******/
 
+.restaurant {
+    width: 100%;
+    max-width: 1053px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+}
+
 .restaurants__cards {
     background-color: #F6F6F6;
     padding-top: 10px;
+    padding-bottom: 30px;
 
     .card__grid {
         display: grid;
         justify-content: center;
 
-
         @media (min-width: 1024px) {
             display: grid;
-            grid-template-columns: 490px 490px; // Deux colonnes de largeur égale
-            gap: 5%; // Espacement entre les colonnes
+            grid-template-columns: 1fr 1fr;
+            gap: 50px;
             justify-content: center;
             padding-bottom: 20px;
+
+            .card__grid> :first-child {
+                justify-items: end;
+            }
+
+            .card__grid> :last-child {
+                justify-items: start;
+            }
         }
 
         h1 {
@@ -239,11 +293,12 @@ a {
         width: 340px;
         height: 251px;
         border-radius: 15px;
-        margin-bottom: 18px;
+
 
         &:hover {
             transform: scale(1.05); // Zoom au survol
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); // Ombre au survol
+            transition: 500ms;
         }
 
         @media (min-width: 768px) {
@@ -336,8 +391,7 @@ a {
 footer {
     background-color: #353535;
     color: white;
-    padding-top: 15px;
-    padding-bottom: 20px;
+    padding-top: 14px;
 
     .foot {
         @media (min-width: 768px) {
@@ -354,8 +408,9 @@ footer {
                 font-weight: 400;
                 font-size: 18px;
                 color: white;
-                margin-left: 80px;
+                margin-left: 60px;
                 margin-right: 20px;
+                padding-top: 20px;
             }
         }
 
@@ -367,6 +422,7 @@ footer {
             @media (min-width: 1024px) {
                 justify-content: flex-end;
                 width: 100%;
+                padding-top: 20px;
             }
         }
 
@@ -376,6 +432,8 @@ footer {
 
         p {
             margin-left: 22px;
+            margin-bottom: 0;
+            font-size: 16px;
         }
     }
 }
@@ -394,9 +452,7 @@ footer {
 /****** Menus images et titres *******/
 
 .menu__part {
-    @media (min-width: 768px) {
-        @include flex-center;
-    }
+    @include flex-center;
 }
 
 .menu__image {
@@ -411,25 +467,35 @@ footer {
 }
 
 .menu {
+    width: 100%;
     background-color: #F6F6F6;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     z-index: 2;
     position: relative;
-    margin-top: -60px;
+    margin-top: -50px;
     padding-bottom: 60px;
 
     @media (min-width: 768px) {
-        width: 1055px;
+        width: 80%;
     }
 
+    @media (min-width: 1024px) {
+        width: 80%;
+    }
+
+
+
     .menu__title {
+        max-width: 349px;
+        margin-left: auto;
+        margin-right: auto;
+
         h1 {
             font-family: 'Shrikhand', sans-serif;
             font-size: 28px;
             font-style: italic;
             font-weight: 400;
-            padding-top: 60px;
 
             @media (min-width: 768px) {
                 @include flex-center;
@@ -472,32 +538,41 @@ footer {
 .food {
     @include flex-center;
     flex-direction: column;
+    max-width: 349px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+
+    @media (min-width: 1024px) {
+        max-width: 634px;
+    }
 
     .food__title {
         @include font-title;
         width: 100%;
-        margin: 40px 0 0 20px;
-
-        @media (min-width: 768px) {
-            margin-left: 700px;
-        }
+        margin-bottom: 2px;
     }
 
     .card {
         width: 349px;
         height: 72px;
-        border: #F6F6F6 1px solid;
         background-color: white;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         margin-bottom: 22px;
         border-radius: 15px;
         position: relative;
+        cursor: pointer;
+
+        @media (min-width: 1024px) {
+            width: 634px;
+        }
 
         .card__content {
             display: flex;
+            max-width: 634px;
 
             .card__txt {
-                width: 80%;
+                width: 90%;
                 margin-left: 15px;
                 white-space: nowrap;
                 overflow: hidden;
@@ -532,16 +607,18 @@ footer {
                 background-color: white;
                 padding: 5px;
                 display: none;
+
             }
         }
 
         &:hover .check {
-            width: 60px;
-            height: 75px;
+            width: 69px;
+            height: 72px;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
             background-color: #99E2D0;
             @include flex-center;
+            transition: 50ms;
 
             i {
                 display: block;
@@ -550,8 +627,14 @@ footer {
 
         .card__price {
             display: flex;
-            align-items: center;
+            justify-content: flex-end;
+            align-items: flex-end;
             margin-right: 10px;
+            margin-top: 25px;
         }
     }
+}
+
+.commander {
+    padding: 35px;
 }
