--- a/CSS/style.css
+++ b/CSS/style.css
@@ -142,6 +142,49 @@ a {
   display: none;
 }
 
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  /* Fond semi-transparent pour le fond */
+  z-index: 999;
+  /* Assure que le loader est au-dessus de tout autre contenu */
+  animation: hideLoader 0s linear 3s forwards;
+  /* Animation pour cacher le loader après 3 secondes */
+}
+
+.loader {
+  border: 8px solid #f3f3f3;
+  /* couleur de la bordure */
+  border-top: 8px solid #9747FF;
+  /* couleur de la bordure supérieure */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+  /* animation de rotation */
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes hideLoader {
+  to {
+    display: none;
+  }
+  /* Cacher le loader à la fin de l'animation */
+}
 /****** 2ème section *******/
 #functioning {
   padding: 0 1rem;
@@ -331,7 +374,8 @@ a {
   /* Ajoute un espace de 40 pixels à droite et 20 pixels en haut */
   padding-right: 40px;
   margin-top: 20px;
-  position: relative; /* Positionne cet élément relativement par rapport à son conteneur parent */
+  position: relative;
+  /* Positionne cet élément relativement par rapport à son conteneur parent */
   /* Positionne les icônes font-awesome de manière absolue dans l'élément .card__fav */
   /* Lorsque survolé */
 }
@@ -342,12 +386,16 @@ a {
   left: 0;
 }
 .restaurants__cards .card .card__content .card__fav .fa-regular {
-  color: black; /* Couleur de l'icône noire */
-  transition: transform 1s; /* Ajoute une transition de 1 seconde à la transformation */
+  color: black;
+  /* Couleur de l'icône noire */
+  transition: transform 1s;
+  /* Ajoute une transition de 1 seconde à la transformation */
 }
 .restaurants__cards .card .card__content .card__fav .fa-solid {
-  opacity: 0; /* Rend l'icône solide transparente au départ */
-  transition: opacity 1s; /* Ajoute une transition de 1 seconde à l'opacité */
+  opacity: 0;
+  /* Rend l'icône solide transparente au départ */
+  transition: opacity 1s;
+  /* Ajoute une transition de 1 seconde à l'opacité */
 }
 .restaurants__cards .card .card__content .card__fav:hover {
   /* Cache l'icône régulière en la réduisant à l'échelle 0 */
@@ -358,7 +406,8 @@ a {
 }
 .restaurants__cards .card .card__content .card__fav:hover .fa-solid {
   opacity: 1;
-  color: rgb(147, 86, 220); /* Change la couleur de l'icône solide en violet */
+  color: rgb(147, 86, 220);
+  /* Change la couleur de l'icône solide en violet */
 }
 
 /****** Footer *******/
